# SealsEventHub-open

./: README.md  h origin main  index.html
assets/: index-CchOhcB0.css  index-DXRX8Gbd.js
backend/: .gitignore  docker-compose.yml
backend/database/: database.sql
backend/rust_api/: .gitignore  Cargo.toml  Dockerfile  ReadMe.txt  Rocket.toml
backend/rust_api/src/: .env  auth.rs  channels_api.rs  database.rs  events_management_api.rs  main.rs  model.rs  permissions_management_api.rs  teams_api.rs  utils.rs
frontend/: .gitignore
frontend/event-hub/: .env  index.html  package-lock.json  package.json  vite.config.js
frontend/event-hub/src/: App.jsx
frontend/event-hub/src/components/: Button.jsx  Card.jsx  ChannelCard.jsx  Input.jsx  Navbar.jsx  PopupManager.jsx
frontend/event-hub/src/components/AbstractComponents/: AuthForm.jsx
frontend/event-hub/src/components/Context/: AuthContext.jsx
frontend/event-hub/src/components/Popups/: LoginForm.jsx  ProfilePopup.jsx  SignUpForm.jsx
frontend/event-hub/src/pages/: Channels.jsx  EventPage.jsx  Homepage.jsx  Inbox.jsx  LandingPage.jsx  Teams.jsx
