[package]
name = "rust_api"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = {version = "0.5.1", features =["tls", "json"]}
rocket_cors = "0.6.0"
jsonwebtoken = "8.1.1"
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
bcrypt = "0.12"
chrono = {version = "0.4.39", features =["serde"]}
